# normal-map-edge-detection

./: README.md  main.py  normal_map.desktop  normal_map_booster.desktop  pyproject.toml
normal_map/: Manual.html  __init__.py  normal_map_docker.py  normal_map_filter.py  slope_filter_numpy.py  utils.py
normal_map_booster/: Manual.html  __init__.py  normal_map_docker.py  normal_map_filter.py
scripts/: build.py
tests/: test_slope_filter.py
tests/assets/: __init__.py
