[tool.poetry]
name = "normal_map"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["normal_map.desktop"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build = [
    { cmd = "poetry build" },
    { cmd = "poetry run python -m scripts.build" },
]
