[tool.poetry]
name = "normal_map_booster"
version = "0.1.0"
description = "Normal Map Booster is a Krita plugin to generate custom normal maps from height maps."
authors = [
    "Natalia Zalewska <natalya.zalewska@gmail.com>",
    "Krzysztof Wisniewski <argmaster.world@gmail.com>",
]
readme = "README.md"
include = ["normal_map_booster.desktop"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.27.0"
numpy = "^2.0.0"
pyqt5 = "^5.15.10"
pytest = "^8.2.2"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build = [
    { cmd = "poetry build" },
    { cmd = "poetry run python -m scripts.build" },
]
